# supply-chain-agent

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  End to End flow.docx  Makefile  README.md  SETUP.md  Solution Architecture.docx  create_dashboards.py  dashboard_live.py  grafana_setup.py  populate_dashboards.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
app/: config.py  main.py
app/agents/: __init__.py  analytics.py  forecast.py  graph.py  inventory.py  knowledge.py  policy.py  procurement.py  state.py  supervisor.py
app/llm/: __init__.py  client.py
app/memory/: __init__.py  checkpointer.py
app/models/: __init__.py  kpi.py  policy.py  procurement.py  state.py
app/observability/: __init__.py  attributes.py  log_processor.py  loki.py  metrics.py  otel.py  pii.py  spans.py
app/policy/: __init__.py  evaluator.py  extraction.py  schema.py
app/tools/: __init__.py  kpi_tools.py  rag_tools.py  sap_tools.py
deploy/docker/: Dockerfile.app  Dockerfile.sap-mock
deploy/k8s/: configmap.yaml  cronjob.yaml  deployment.yaml  ingress.yaml  otel-collector.yaml  sap-mock-deployment.yaml  secrets-provider.yaml  service.yaml
docker/: api.Dockerfile  otel-collector.yaml  sap-mock.Dockerfile
docs/: E2E-Execution-Summary.docx  e2e-execution-summary.md
docs/adr/: ADR-001-langgraph-orchestration.md  ADR-002-deterministic-policy-evaluation.md  ADR-003-sap-mock-adapter-pattern.md  ADR-004-cosmos-db-checkpointer.md  ADR-005-grafana-cloud-otlp-observability.md  ADR-006-key-vault-csi-secrets.md
docs/runbooks/: approval-queue-stuck.md  azure-openai-quota-exhausted.md  cosmos-throttled.md  forecast-confidence-collapse.md  otel-collector-down.md  policy-extraction-mismatch.md
grafana/dashboards/: governance-dashboard.json  logs-traces-dashboard.json  (+1 more)
ops/: diff_policy_rules.py  generate_execution_report.py  generate_policy_pdfs.py  reindex_policies.py  upload_policies.py
policies/: POL-PROC-001.json  POL-PROC-002.json  POL-PROC-003.json  SOP-PROC-001.json
sap_mock/: database.py  main.py  models.py
tests/: conftest.py  test_forecast_agent.py  test_inventory_agent.py  test_policy_agent.py  test_procurement_agent.py  test_sap_mock.py
(+35 files in other folders)
